# SGXoMeter

./: .gitignore  LICENSE  README.md  evaluation.txt
sgx-appsbench/sgx/: BaselineData.txt  CMakeLists.txt  plotdata.txt  plotdata_sim.txt  runBenchs.sh  runDNABench.sh  runRSABench.sh
sgx-appsbench/sgx/BenchResultsMarcel/: GrapheneBench.txt
sgx-appsbench/sgx/BenchResultsMarcel/AES256Decrypt_DSGX4/: AESdecryptDSGX4.txt  BaselineData.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/AES256Decrypt_Ice1/: AESdecryptICE1.txt  AESdecryptThroughput_ICE1.txt  BaselineData.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/AES256Decrypt_SSGX8/: BaselineData.txt  OpenEnclaveData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/AES256Encrypt_DSGX4/: AESencryptDSGX4.txt  AESencryptThroughput_DSGX4.txt  BaselineData.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/AES256Encrypt_Ice1/: AESdecryptThroughput_ICE1.txt  AESencryptICE1.txt  BaselineData.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/AES256Encrypt_SSGX8/: BaselineData.txt  OpenEnclaveData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/DNA_DSGX4/: BaselineData.txt  DNAThroughput_DSGX4.txt  DNA_DSGX4.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/DNA_Ice1/: AESdecryptThroughput_ICE1.txt  BaselineData.txt  DNA_ICE1.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  dnaIce1.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/DNA_SSGX8/: BaselineData.txt  OpenEnclaveData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC Paging/: ssgx8_rand.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC_Rand_DSGX4/: BaselineData.txt  EPC_RAND_DSGX4.txt  EPC_RAND_DSGX4v.txt  EPC_RAND_ICE1.txt  EPC_RAND_Throughput_DSGX4.txt  EPC_SEQ_DSGX4vsICE1.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  calcDSGX4vsICE1.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC_Rand_Ice1/: BaselineData.txt  EPCThroughput_ICE1.txt  EPC_RAND_ICE1.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC_Rand_SSGX8/: BaselineData.txt  OpenEnclaveData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC_Seq_DSGX4/: BaselineData.txt  EPC_RAND_DSGX4.txt  EPC_SEQ_DSGX4v.txt  EPC_SEQ_DSGX4vsICE1.txt  EPC_SEQ_ICE1.txt  EPC_SEQ_Throughput_DSGX4.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  calcDSGX4vsICE1.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC_Seq_Ice1/: BaselineData.txt  EPCThroughputSEQ_ICE1.txt  EPC_SEQ_ICE1.txt  GrapheneData.txt  OpenEnclaveData.txt  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/EPC_Seq_SSGX8/: BaselineData.txt  OpenEnclaveData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/SHA256_DSGX4/: BaselineData.txt  GrapheneData.txt  OpenEnclaveData.txt  SHA256_DSGX4.txt  SHA_COMPLETE_DSGX4.txt  SHA_Throughput_DSGX4.txt  calCompleteAvg.py  calcAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/SHA256_Ice1/: BaselineData.txt  GrapheneData.txt  OpenEnclaveData.txt  SHAThroughput_ICE1.txt  SHA_COMPLETE_ICE1.txt  calCompleteAvg.py  calcAvgThru.py  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchResultsMarcel/SHA256_SSGX8/: BaselineData.txt  OpenEnclaveData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/BenchmarkResults/: calcAvg.py  cryptoAvg.txt  dnaWithOcallAvg.txt  rsaKeyGenAvg.txt  sha256Avg.txt  totalAvg.txt  totalAvgWithoutOcall.txt
sgx-appsbench/sgx/BenchmarkResults/cryptoServerSSGX7Plotdata/: BaselineData.txt  calcAvg.py  plot.py
sgx-appsbench/sgx/BenchmarkResults/cryptoServerSSGX7Plotdata2/: BaselineData.txt  plot.py  plotdata.txt  plotdata_sim.txt  plotdata_simOld.txt
sgx-appsbench/sgx/BenchmarkResults/dnaServerSSGX7results/: calcAvg.py  plot.py
sgx-appsbench/sgx/BenchmarkResults/dnaWithoutOcallsNuc2Plotdata/: BaselineData.txt  dnaWithoutOcallAvg.txt  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/BenchmarkResults/dnaWithoutOcallsServerSSGX2Plotdata/: BaselineData.txt  plot.py  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/BenchmarkResults/dnaWithoutOcallsServerSSGX7Plotdata/: BaselineData.txt  calcAvg.py  dnaWithoutOcallAvg.txt  plot.py  plotdata_sim.txt
sgx-appsbench/sgx/BenchmarkResults/dnaWithoutOcallsServerSSGX7Plotdata2/: BaselineData.txt  dnaWithoutOcallAvg.txt  plot.py  plot2.py  plotdata.txt  plotdataOld.txt  plotdata_sim.txt  plotdata_simOld.txt
sgx-appsbench/sgx/benchmark_scripts/: runCryptoBench.sh  runSDKCryptoBench.sh
sgx-appsbench/sgx/cmake/: ConfigSGX.cmake  Init.cmake
sgx-appsbench/sgx/cryptoServerSSGX2Plotdata/: BaselineData.txt  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/cryptoServerSSGX7Plotdata/: plot.py  plotdata.txt
sgx-appsbench/sgx/dnaServerSSGX2results/: BaselineData.txt  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/dnaServerSSGX7results/: BaselineData.txt  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/dnaWithoutOcallsServerSSGX7Plotdata/: BaselineData.txt  plotdata.txt
sgx-appsbench/sgx/rsaKeyGenSSGX2results/: BaselineData.txt  plot.py  plotdata.txt
sgx-appsbench/sgx/rsaKeyGenSSGX7results/: plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/sha256ServerSSGX7PlotData/: BaselineData.txt
sgx-appsbench/sgx/sha256Serverssgx2Plotdata/: BaselineData.txt  plot.py  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/sha256TestsTillOneMB/: BaselineData.txt  plot.py  plotdata.txt  plotdata_sim.txt
sgx-appsbench/sgx/signingServerSSGX2Plotdata/: BaselineData.txt
sgx-appsbench/sgx/test_app/: CMakeLists.txt  GlobalMacros.h  plot.py  sgx_t.mk  sgx_u.mk
(+277 files in other folders)
